<resources>
    <string name="app_name">Project IHM</string>
    <string name="arrow_that_show_the_content_of_this_section">Arrow that show the content of this section</string>
    <string name="email">Email</string>
    <string name="lastname">LastName</string>
    <string name="name">Name</string>
    <string name="i_user_information">I. User information</string>
    <string name="what_kind_of_dreamer_are_you">What kind of dreamer are you?</string>
    <string name="ii_memories_of_dreams">II. Memories of dreams</string>
    <string name="how_often_do_you_have_dreams">How often do you have dreams ?</string>
    <string name="how_detailed_are_your_dreams">How detailed are your dreams?</string>
    <string name="do_you_ever_have_lucid_dreams">Do you ever have lucid dreams?</string>
    <string name="often">Often</string>
    <string name="sometimes">Sometime</string>
    <string name="rarely">Rarely</string>
    <string name="never">Never</string>
    <string name="lastname_lbl">LastName :</string>
    <string name="name_lbl">Name :</string>
    <string name="email_lbl">Email :</string>
    <string name="iii_dream_content">III. Dream content</string>
    <string name="fall">Fall</string>
    <string name="family">Family</string>
    <string name="love">Love</string>
    <string name="which_topics_come_up_most_often">Which topics come up most often ?</string>
    <string name="work">Work</string>
    <string name="do_you_dream_about_real_people">Do you dream about real people ?</string>
    <string name="iv_emotions">IV. Emotions</string>
    <string name="anger">Anger</string>
    <string name="confusion">Confusion</string>
    <string name="joy">Joy</string>
    <string name="serenity">Serenity</string>
    <string name="sadness">Sadness</string>
    <string name="fear">Fear</string>
    <string name="stress">Stress</string>
    <string name="in_your_opinion_your_dreams_are_mainly">In your opinion, your dreams are mainly :</string>
    <string name="what_emotion_dominates_most_often_in_your_dreams">What emotion dominates most often in your dreams ?</string>
    <string name="result">Result</string>
    <string name="listitem1">Reflect of my stress</string>
    <string name="listitem2">Reflect of my desire</string>
    <string name="listitem3">Symbolic</string>
    <string name="listitem4">Inspired of my everyday life</string>
    <string name="credits">Credits</string>
    <string name="start">Start</string>
    <string name="nigth_sky_background">Nigth Sky background</string>
    <string name="joy_or_excitement">Joy or Excitement</string>
    <string name="fear_or_anxiety">Fear or Anxiety</string>
    <string name="which_of_the_following_emotions_did_you_experience_during_your_dream">Which of the following emotions did you experience during your dream?</string>
    <string name="next">Next</string>
    <string name="v_the_escape_of_dreams">V.The Escape of Dreams</string>
    <string name="extreme_confusion">Extreme Confusion</string>
    <string name="terrible_sadness">Terrible Sadness</string>
    <string name="endless_bag_of_candy">Endless bag of candy</string>
    <string name="the_clown_it">The clown IT</string>
    <string name="a_fight_between_all_your_exes">A fight between all your exes</string>
    <string name="freddy_fazbear" translatable="false">Freddy Fazbear</string>
    <string name="which_of_the_following_would_you_create_in_a_lucid_dream">Which of the following would you create in a lucid dream?</string>
    <string name="money_hehehe">Money hehehe</string>
    <string name="big_teddy_bear">Big Teddy bear</string>
    <string name="frustration">Frustration</string>
    <string name="what_emotion_stands_out_most_in_your_dreams">What emotion stands out most in your dreams?</string>
    <string name="work_paper">Work paper</string>
    <string name="almost_done">Almost done !</string>
    <string name="did_you_enjoy_this_test">Did you enjoy this test ?</string>
    <string name="happy_smile">Happy smile</string>
    <string name="sad_smile">Sad smile</string>
    <string name="historic">Historic</string>
    <string name="close">Close</string>
    <string name="_0" translatable="false">0</string>
    <string name="loading">Loading ...</string>
    <string name="firstname">Firstname</string>
    <string name="error_loading">Error Loading</string>
    <string name="enter_value">Please enter a correct value</string>
    <string name="registerResultBtn">Register my result</string>
    <string name="sendResultBtn">Send my result</string>
    <string name="userName">User name</string>
    <string name="satisfiedUser">Thank you for your answer and your feedback\n We are very grateful you enjoyed answering this form!</string>
    <string name="unsatisfiedUser">Thank you for your answer and your feedback\n We are sorry you did not enjoyed answering to this form..</string>
    <string name="BigDreamer">You seems to dream a lot and to have a lot of information remaining when waking up.\n Maybe you enjoy a lot to dream and wish to be able to control them better.</string>
    <string name="smallDreamer">You seems to not be dreaming a lot and not really remembering a lot of what happen in your dreams. \n Maybe you do not really enjoy dreaming and do not really care about dreams in general.</string>
    <string name="joyfullDreamer">Your dreams seem mostly positive and filled with joy, which may reflect a generally calm and balanced state of mind.\nYou appear open to pleasant experiences, and your dreams could be an extension of that positive energy.</string>
    <string name="stressfullDreamer">Your dreams often seem filled with stress or worry, which may mirror pressure present in your everyday life.\nYour mind could be trying to process these concerns while you sleep.</string>
    <string name="angryfullDreamer">Your dreams seem marked by anger or frustration, which may reflect tensions you experience in your daily life.\nIt’s possible that your mind is using dreams to express emotions you don’t always show outwardly.</string>
    <string name="sadDreamer">Your dreams seem tinged with sadness or melancholy, which may indicate a certain emotional sensitivity.\nIt’s possible that your dreams are a space where deeper or harder-to-express feelings come through.</string>
    <string name="back">Back</string>


</resources>