<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/nigth_sky_background">

    <ImageView
        android:id="@+id/nightSkyImg4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/nigth_sky_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nighth_sky" />

    <TextView
        android:id="@+id/lblMainMenu4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/what_kind_of_dreamer_are_you"
        android:textColor="#CAC3C3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nextBttn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMainMenu4">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/header_section5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#306695"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/section4Lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9.5"
                    android:text="@string/v_the_escape_of_dreams"
                    android:textColor="#E0E0E0" />

                <ImageView
                    android:id="@+id/ImgArrowSectionUp4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/arrow_that_show_the_content_of_this_section"
                    android:rotation="180"
                    app:srcCompat="@android:drawable/arrow_up_float" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/body_section5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/lblQuestion11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/which_of_the_following_would_you_create_in_a_lucid_dream"
                    android:textColor="#D7CCC8" />

                <CheckBox
                    android:id="@+id/candyCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/endless_bag_of_candy"
                    android:textColor="#D7CCC8" />

                <CheckBox
                    android:id="@+id/teddyCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/big_teddy_bear"
                    android:textColor="#D7CCC8" />

                <CheckBox
                    android:id="@+id/freddyCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freddy_fazbear"
                    android:textColor="#FFFFFF" />

                <CheckBox
                    android:id="@+id/moneyCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_hehehe"
                    android:textColor="#D7CCC8" />

                <CheckBox
                    android:id="@+id/exeCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_fight_between_all_your_exes"
                    android:textColor="#D7CCC8" />

                <CheckBox
                    android:id="@+id/clownCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_paper"
                    android:textColor="#D7CCC8" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/nextBttn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/nightSkyImg4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>