<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/nigth_sky_background"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/nightSkyImg3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/nigth_sky_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nighth_sky" />

    <TextView
        android:id="@+id/lblMainMenu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/what_kind_of_dreamer_are_you"
        android:textColor="#CAC3C3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nextBttn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nightSkyImg3"
        app:layout_constraintTop_toBottomOf="@+id/lblMainMenu3">

        <LinearLayout
            android:id="@+id/container_section4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header_section4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#39668E"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblEmotion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9.5"
                    android:text="@string/iv_emotions"
                    android:textColor="#E0E0E0" />

                <ImageView
                    android:id="@+id/ImgArrowSectionUp3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/arrow_that_show_the_content_of_this_section"
                    android:rotation="180"
                    app:srcCompat="@android:drawable/arrow_up_float" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/body_section4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/lblQuestion9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/what_emotion_dominates_most_often_in_your_dreams"
                    android:textColor="#F5F5F5" />

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipJoy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/joy" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipConfusion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/confusion" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSerenity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/serenity" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipFear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/fear" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipStress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/stress" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSadness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/sadness" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipAnger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/anger" />
                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/lblQuestion10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/in_your_opinion_your_dreams_are_mainly"
                    android:textColor="#F5F5F5" />

                <Spinner
                    android:id="@+id/spinnerOpinion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:minHeight="48dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/nextBttn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nightSkyImg3" />

</androidx.constraintlayout.widget.ConstraintLayout>